--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ssplib/react-components": "^0.0.12",
         "@types/node": "18.15.0",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
