--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@fontsource/roboto": "^4.5.8",
+        "@mui/material": "^5.12.1",
         "@ssplib/react-components": "^0.0.12",
         "@types/node": "18.15.0",
         "@types/react": "18.0.28",
