--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.6.0",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@types/node": "18.15.0",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
         "eslint": "8.36.0",
         "eslint-config-next": "13.2.4",
+        "framer-motion": "^10.12.4",
         "next": "13.2.4",
         "prettier": "^2.8.4",
         "react": "18.2.0",
